--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+    id "se.inera.intyg.plugin.common" version "1.0.45" apply false
+    id "org.akhikhl.gretty" version "1.4.2" apply false
+}
+
 ext {
     commonVersion = System.properties['commonVersion'] ?: '0-SNAPSHOT'
     infraVersion = System.properties['infraVersion'] ?: '0-SNAPSHOT'
@@ -27,28 +32,15 @@ ext {
     h2Version = "1.3.176"
 }
 
-buildscript {
-    repositories {
-        mavenLocal()
-        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-
-    dependencies {
-        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
-        classpath 'org.akhikhl.gretty:gretty:1.4.1'
-    }
-}
-
 allprojects {
+    apply plugin: 'se.inera.intyg.plugin.common'
+    apply plugin: 'maven'
+
     repositories {
         mavenLocal()
         maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
         maven { url "http://repo.maven.apache.org/maven2" }
     }
-
-    apply plugin: 'inera-intyg'
-    apply plugin: 'maven'
 
     dependencies {
         compile "com.google.code.findbugs:jsr305:3.0.0"
