INTYG-4447: Lägger till temporär check för att hantera problemed med fullstandigtNamn i anpassningsplattformen för fk7263

--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -61,3 +61,6 @@ hsa.healhcareunitmembers.cache.expiry=60
 ################################################
 recipients.update.cron = 0 * * * * *
 recipient.file = ${recipient.config.file}
+
+# Temporary hack for mitigating Anpassningsplattform issue for fk7263
+fk7263.register.medical.certificate.force.fullstandigtnamn=true
