--- a/performanceTests/build.gradle
+++ b/performanceTests/build.gradle
@@ -14,17 +14,42 @@ sourceSets.test.output.classesDir = new File(buildDir, "classes/scala")
 
 task gatling(dependsOn: 'build') {
     doLast {
-        javaexec {
-            main = 'io.gatling.app.Gatling'
-            classpath = sourceSets.test.output + sourceSets.test.runtimeClasspath
-            jvmArgs "-DbaseUrl=$gatlingBaseUrl"
-            args    '-sf', sourceSets.test.output,                          //source folder
-            '-bf', sourceSets.test.output.classesDir,               //target folder where gatling will compile the simulation
-            '-s' , "se.inera.intygstjanst.$simulation",   //The simulation to run
-            '-rf', 'build/reports/gatling'                          //place to put the report
+        logger.lifecycle(" ---- Executing all Gatling scenarios from: ${sourceSets.test.output.classesDir} ----")
+        sourceSets.test.output.classesDirs.singleFile.eachFileRecurse { file ->
+            if (file.isFile() && !isUtilFile(file)) {
+                println(file.name)
+                //Remove the full path, .class and replace / with a .
+                logger.debug("Tranformed file ${file} into")
+                def gatlingScenarioClass = (file.getPath() - (sourceSets.test.output.classesDir.getPath() + File.separator) - '.class')
+                        .replace(File.separator, '.')
+                logger.debug("Tranformed file ${file} into scenario class ${gatlingScenarioClass}")
+
+            javaexec {
+                // I do not use this so
+                main = 'io.gatling.app.Gatling'
+                jvmArgs "-DbaseUrl=${gatlingBaseUrl}"
+                classpath = sourceSets.test.output + sourceSets.test.runtimeClasspath
+                args '-sf', sourceSets.test.output,
+                        '-bf', sourceSets.test.output.classesDir,
+                        '-s', gatlingScenarioClass,
+                        '-rf', 'build/reports/gatling'
+            }
+
+            }
         }
+        logger.lifecycle(" ---- Done executing all Gatling scenarios ----")
     }
 }
+
+static def isUtilFile(File file) {
+    if (file.name.contains("\$")  || file.name.startsWith("Conf") || file.name.startsWith("Headers") ||
+            file.name.startsWith("Utils")) {
+        return true
+    }
+    return false
+}
+
+
 
 dependencies {
     testCompile "io.gatling:gatling-app:${gatlingVersion}"
