--- a/performanceTests/build.gradle
+++ b/performanceTests/build.gradle
@@ -17,24 +17,17 @@ task gatling(dependsOn: 'build') {
         logger.lifecycle(" ---- Executing all Gatling scenarios from: ${sourceSets.test.output.classesDir} ----")
         sourceSets.test.output.classesDirs.singleFile.eachFileRecurse { file ->
             if (file.isFile() && !isUtilFile(file)) {
-                println(file.name)
-                //Remove the full path, .class and replace / with a .
-                logger.debug("Tranformed file ${file} into")
                 def gatlingScenarioClass = (file.getPath() - (sourceSets.test.output.classesDir.getPath() + File.separator) - '.class')
                         .replace(File.separator, '.')
-                logger.debug("Tranformed file ${file} into scenario class ${gatlingScenarioClass}")
-
-            javaexec {
-                // I do not use this so
-                main = 'io.gatling.app.Gatling'
-                jvmArgs "-DbaseUrl=${gatlingBaseUrl}"
-                classpath = sourceSets.test.output + sourceSets.test.runtimeClasspath
-                args '-sf', sourceSets.test.output,
-                        '-bf', sourceSets.test.output.classesDir,
-                        '-s', gatlingScenarioClass,
-                        '-rf', 'build/reports/gatling'
-            }
-
+                javaexec {
+                    main = 'io.gatling.app.Gatling'
+                    jvmArgs "-DbaseUrl=${gatlingBaseUrl}"
+                    classpath = sourceSets.test.output + sourceSets.test.runtimeClasspath
+                    args '-sf', sourceSets.test.output,
+                            '-bf', sourceSets.test.output.classesDir,
+                            '-s', gatlingScenarioClass,
+                            '-rf', 'build/reports/gatling'
+                }
             }
         }
         logger.lifecycle(" ---- Done executing all Gatling scenarios ----")
@@ -42,18 +35,12 @@ task gatling(dependsOn: 'build') {
 }
 
 static def isUtilFile(File file) {
-    if (file.name.contains("\$")  || file.name.startsWith("Conf") || file.name.startsWith("Headers") ||
-            file.name.startsWith("Utils")) {
-        return true
-    }
-    return false
+    return (file.name.contains("\$")  || file.name.startsWith("Conf") || file.name.startsWith("Headers") ||
+            file.name.startsWith("Utils"))
 }
-
-
 
 dependencies {
     testCompile "io.gatling:gatling-app:${gatlingVersion}"
-    testCompile "io.gatling:gatling-recorder:${gatlingVersion}"
     testCompile "io.gatling.highcharts:gatling-charts-highcharts:${gatlingVersion}"
     testCompile "org.scalaj:scalaj-http_2.11:2.2.0"
 }
