--- a/performanceTests/build.gradle
+++ b/performanceTests/build.gradle
@@ -22,7 +22,7 @@ task gatling(dependsOn: 'build') {
                 javaexec {
                     main = 'io.gatling.app.Gatling'
                     jvmArgs "-DbaseUrl=${gatlingBaseUrl}"
-                    classpath = sourceSets.test.output + sourceSets.test.runtimeClasspath
+                    classpath = sourceSets.test.runtimeClasspath
                     args '-sf', sourceSets.test.output,
                             '-bf', sourceSets.test.output.classesDir,
                             '-s', gatlingScenarioClass,
