--- a/performanceTests/build.gradle
+++ b/performanceTests/build.gradle
@@ -34,6 +34,21 @@ task gatling(dependsOn: 'build') {
     }
 }
 
+task gatlingSingleTest(dependsOn: 'build') {
+    doLast {
+        javaexec {
+            main = 'io.gatling.app.Gatling'
+            jvmArgs "-DbaseUrl=${gatlingBaseUrl}"
+            classpath = sourceSets.test.runtimeClasspath
+            args '-sf', sourceSets.test.output,
+                    '-bf', sourceSets.test.output.classesDir,
+                    '-s', "se.inera.intygstjanst.$simulation",
+                    '-rf', 'build/reports/gatling'
+        }
+    }
+}
+
+
 static def isUtilFile(File file) {
     return (file.name.contains("\$")  || file.name.startsWith("Conf") || file.name.startsWith("Headers") ||
             file.name.startsWith("Utils"))
