--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -64,3 +64,4 @@ recipient.file = ${recipient.config.file}
 
 # Temporary hack for mitigating Anpassningsplattform issue for fk7263
 fk7263.register.medical.certificate.force.fullstandigtnamn=true
+fk7263.revoke.medical.certificate.force.fullstandigtnamn=true
