--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,10 @@ allprojects {
         }
     }
 
+    compileJava {
+        options.encoding = "UTF-8"
+    }
+
     [install.repositories.mavenInstaller, uploadArchives.repositories.mavenDeployer]*.pom*.whenConfigured { pom ->
         pom.dependencies.findAll {dep -> dep.groupId == 'se.inera.intyg.common'}.each {
             it.version = se.inera.intyg.IntygPluginKt.findResolvedVersion(project, 'se.inera.intyg.common')
