--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -86,6 +86,7 @@
     repo: "{{ config_repository }}"
     dest: "{{ config_folder }}"
     version: "{{ config_version }}"
+    force: yes
 
 - name: Start tomcat
   service:
