--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ ext {
     commonVersion = System.properties['commonVersion'] ?: '0-SNAPSHOT'
     infraVersion = System.properties['infraVersion'] ?: '0-SNAPSHOT'
 
-    schemasContractVersion = "2.1.5"
+    //schemasContractVersion = "2.1.5"
+    schemasContractVersion = "0-SNAPSHOT"
 
     intygHealthcondRehabilitationSchemasVersion = "1.0.7"
     intygInsuranceprocessSchemasVersion = "1.0.4"
