INTYG-5287: Ny version 2.1.6 för schemas-contract

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ ext {
     commonVersion = System.properties['commonVersion'] ?: '0-SNAPSHOT'
     infraVersion = System.properties['infraVersion'] ?: '0-SNAPSHOT'
 
-    //schemasContractVersion = "2.1.5"
-    schemasContractVersion = "0-SNAPSHOT"
+    schemasContractVersion = "2.1.6"
 
     intygHealthcondRehabilitationSchemasVersion = "1.0.7"
     intygInsuranceprocessSchemasVersion = "1.0.4"
