--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -80,3 +80,6 @@ hsa.healhcareunitmembers.cache.expiry=60
 ################################################
 recipients.update.cron = 0 0 0 * * *
 recipient.file = ${recipient.config.file}
+
+# Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
+fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
