INTYG-4528: Lägger tillbaka gammalt fulhack

--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -61,3 +61,5 @@ hsa.healhcareunitmembers.cache.expiry=60
 ################################################
 recipients.update.cron = 0 * * * * *
 recipient.file = ${recipient.config.file}
+
+fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
