--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -63,15 +63,15 @@ infrastructure.directory.employee.getemployee.endpoint.url=${ntjp.base.url}/infr
 
 ################################################
 #
-# HSA/PU ignite cache settings
+# HSA/PU Cache (redis) configuration
 #
 ################################################
-cache.ipaddresses=127.0.0.1:47530..47539
-cache.default.expiration.seconds=60
-cache.bindport=47530
-hsa.unit.cache.expiry=60
-hsa.healthcareunit.cache.expiry=60
-hsa.healhcareunitmembers.cache.expiry=60
+redis.port=6379
+redis.cache.default_entry_expiry_time_in_seconds=86400
+pu.cache.expiry=86400
+hsa.unit.cache.expiry=86400
+hsa.healthcareunit.cache.expiry=86400
+hsa.healhcareunitmembers.cache.expiry=86400
 
 ################################################
 #
