DEVENV: redis.password konfiguration tillagd

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -67,6 +67,7 @@ infrastructure.directory.employee.getemployee.endpoint.url=${ntjp.base.url}/infr
 #
 ################################################
 redis.port=6379
+redis.password=
 redis.cache.default_entry_expiry_time_in_seconds=86400
 pu.cache.expiry=86400
 hsa.unit.cache.expiry=86400
