OPENSHIFT: Påbörjad förändring mot Java-baserad konfiguration för Jms och Jpa

--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -11,8 +11,9 @@ dependencies {
     compile "org.liquibase:liquibase-core:${liquibaseVersion}"
     compile "org.springframework.data:spring-data-jpa:${springDataVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
+    compile "com.zaxxer:HikariCP-java6:${hikariCPVersion}"
+    compile "com.h2database:h2:${h2Version}"
 
     testCompile "org.springframework:spring-test:${springVersion}"
 
-    testRuntime "com.h2database:h2:${h2Version}"
 }
