--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ ext {
 
     activeMqVersion = "5.13.4"
     geronimoJmsVersion = "1.1.1"
+    hikariCPVersion = "2.3.5"
     jadiraUserTypeVersion = "5.0.0.GA"
+    javaxJmsVersion = "1.1-rev-1"
     jpaHibernateVersion = "1.0.0.Final"
     jsonSchemaValidatorVersion = "2.8.0"
     liquibaseVersion = "3.3.5"
