--- a/web/build.gradle
+++ b/web/build.gradle
@@ -22,10 +22,10 @@ gretty {
 
     jvmArgs = [jvmArgSpringProfiles,
                "-Dcatalina.base=${buildDir}/catalina.base",
-               "-Drecipient.config.file=${projectDir}/recipients-dev.json",
+               "-Drecipients.file=${projectDir}/recipients-dev.json",
                "-Dcredentials.file=${projectDir}/certificate-credentials.properties",
-               "-Dcertificate.logback.file=${projectDir}/certificate-logback.xml",
-               "-Dcertificate.config.file=${projectDir}/certificate-dev.properties"]
+               "-Dlogback.file=${projectDir}/certificate-logback.xml",
+               "-Dconfig.file=${projectDir}/certificate-dev.properties"]
 }
 
 war.dependsOn createVersionPropertyFile
