--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -99,7 +99,7 @@ hsa.healhcareunitmembers.cache.expiry=86400
 #
 ################################################
 recipients.update.cron=0 0 0 * * *
-recipient.file=${recipient.config.file}
+recipient.file=${recipients.file}
 
 # Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
 fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
