--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
   </context-param>
   <context-param>
       <param-name>logbackConfigParameter</param-name>
-      <param-value>certificate.logback.file</param-value>
+      <param-value>logback.file</param-value>
   </context-param>
 
   <servlet-mapping>
@@ -57,25 +57,5 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-
-  <!--
-  <resource-ref>
-    <res-ref-name>jdbc/intyg</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-
-  <resource-ref>
-    <res-ref-name>jms/ConnectionFactory</res-ref-name>
-    <res-type>javax.jms.ConnectionFactory</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-
-  <resource-ref>
-    <res-ref-name>jms/Queue</res-ref-name>
-    <res-type>javax.jms.Queue</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-  -->
 
 </web-app>
