OPENSHIFT: Lade till saknad property

--- a/devops/openshift/test/config/intygstjanst.properties
+++ b/devops/openshift/test/config/intygstjanst.properties
@@ -7,5 +7,6 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # JMS
 jms.broker.url=${activemq.amq.tcp.port}?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
 
-# Base URL to NTjP
+# NTjP configuration
 ntjp.base.url=${baseUrl}/inera-certificate/stub
+infrastructure.directory.logicalAddress=stub
