--- a/devops/openshift/test/config/intygstjanst.properties
+++ b/devops/openshift/test/config/intygstjanst.properties
@@ -8,5 +8,5 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jms.broker.url=${activemq.amq.tcp.port}?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
 
 # NTjP configuration
-ntjp.base.url=${baseUrl}/inera-certificate/stub
+ntjp.base.url=${baseUrl}/inera-certificate/stubs
 infrastructure.directory.logicalAddress=stub
