OPENSHIFT: changing/adding profiles to be able to run in OpenShift and in old way

--- a/web/src/test/resources/config/jms-test.properties
+++ b/web/src/test/resources/config/jms-test.properties
@@ -1,6 +1,6 @@
 
 # JMS configuration
-jms.broker.url=vm://embedded?broker.persistent=false
+jms.broker.url=vm://localhost?broker.persistent=false
 jms.broker.username=
 jms.broker.password=
 jms.destination.queue.name=certificate.queue
