--- a/web/build.gradle
+++ b/web/build.gradle
@@ -12,7 +12,7 @@ task restAssuredTest(type: Test) {
 }
 
 gretty {
-    def jvmArgSpringProfiles = '-Dspring.profiles.active=dev,caching-enabled,embedded,wc-hsa-stub'
+    def jvmArgSpringProfiles = '-Dspring.profiles.active=dev,openshift,caching-enabled,wc-hsa-stub'
     contextPath = '/inera-certificate'
     contextConfigFile = file("src/main/webapp/WEB-INF/jetty-web.xml")
     integrationTestTask = null
