--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -34,7 +34,7 @@ hibernate.show_sql=false
 hibernate.format_sql=true
 
 # JMS configuration
-jms.broker.url=vm://embedded?broker.persistent=false
+jms.broker.url=vm://localhost?broker.persistent=false
 jms.broker.username=
 jms.broker.password=
 jms.destination.queue.name=certificate.queue
