--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -85,6 +85,7 @@ infrastructure.directory.employee.getemployee.endpoint.url=${ntjp.base.url}/infr
 # HSA/PU Cache (redis) configuration
 #
 ################################################
+redis.host=localhost
 redis.port=6379
 redis.password=
 redis.cache.default_entry_expiry_time_in_seconds=86400
@@ -103,3 +104,5 @@ recipient.file=${recipients.file}
 
 # Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
 fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
+
+
