OPENSHIFT: god damn profiles

--- a/devops/openshift/test/env/secret-env.properties
+++ b/devops/openshift/test/env/secret-env.properties
@@ -1,12 +1,10 @@
-# NTJP
-ntjp.ws.certificate.password=
-ntjp.ws.key.manager.password=
-ntjp.ws.truststore.password=
-
 # HSA
-hsa.ws.certificate.password=
-hsa.ws.key.manager.password=
-hsa.ws.truststore.password=
+hsa.ws.key.manager.password=hY28KMlT3w
+hsa.ws.certificate.password=hY28KMlT3w
+hsa.ws.truststore.password=password
 
-
+# NTJP
+ntjp.ws.certificate.password=a56pghtAZ3
+ntjp.ws.key.manager.password=a56pghtAZ3
+ntjp.ws.truststore.password=password
 
