--- a/web/build.gradle
+++ b/web/build.gradle
@@ -12,7 +12,6 @@ task restAssuredTest(type: Test) {
 }
 
 gretty {
-    def jvmArgSpringProfiles = '-Dspring.profiles.active=dev,embedded,caching-enabled,it-fk-stub,wc-hsa-stub'
     contextPath = '/inera-certificate'
     contextConfigFile = file("src/main/webapp/WEB-INF/jetty-web.xml")
     integrationTestTask = null
@@ -20,12 +19,12 @@ gretty {
     debugPort = 5005
     debugSuspend = false
 
-    jvmArgs = [jvmArgSpringProfiles,
-               "-Dcatalina.base=${buildDir}/catalina.base",
-               "-Drecipients.file=${projectDir}/recipients-dev.json",
+    jvmArgs = ["-Dcatalina.base=${buildDir}/catalina.base",
+               "-Dspring.profiles.active=dev,caching-enabled,wc-hsa-stub",
+               "-Drecipient.config.file=${projectDir}/recipients-dev.json",
                "-Dcredentials.file=${projectDir}/certificate-credentials.properties",
-               "-Dlogback.file=${projectDir}/certificate-logback.xml",
-               "-Dconfig.file=${projectDir}/certificate-dev.properties"]
+               "-Dcertificate.logback.file=${projectDir}/certificate-logback.xml",
+               "-Dcertificate.config.file=${projectDir}/certificate-dev.properties"]
 }
 
 war.dependsOn createVersionPropertyFile
@@ -51,32 +50,27 @@ dependencies {
     compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
     compile "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
 
-    compile "org.apache.activemq:activemq-spring:${activeMqVersion}"
-
     compile "org.springframework:spring-jms:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
 
-    compileOnly "javax.jms:jms-api:${javaxJmsVersion}"
+    compileOnly "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
     compileOnly "javax.servlet:servlet-api:${servletApiVersion}"
-    compileOnly "org.apache.activemq:activemq-client:${activeMqVersion}"
 
-    testCompile "com.jayway.restassured:rest-assured:${restassuredVersion}"
-    testCompile "com.jayway.restassured:json-schema-validator:${jsonSchemaValidatorVersion}"
-    testCompile "javax.jms:jms-api:${javaxJmsVersion}"
-    testCompile "org.antlr:ST4:${stAntlr4Version}"
     testCompile "org.springframework:spring-test:${springVersion}"
     testCompile "xmlunit:xmlunit:${xmlUnitVersion}"
+    testCompile "com.jayway.restassured:rest-assured:${restassuredVersion}"
+    testCompile "com.jayway.restassured:json-schema-validator:${jsonSchemaValidatorVersion}"
+    testCompile "org.antlr:ST4:${stAntlr4Version}"
+    testCompile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
 
     // We explicitly declare this as a testRuntime dependency so Restassured tests loads the correct XSD for
     // SetCertificateStatusResponder_1.0.xsd (as it exists in two different schemas)
     testRuntime "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
     testRuntime "javax.servlet:servlet-api:${servletApiVersion}"
 
-    testRuntime "com.h2database:h2:${h2Version}"
-
     gretty "org.apache.activemq:activemq-client:${activeMqVersion}"
     gretty "org.apache.activemq:activemq-broker:${activeMqVersion}"
-    gretty "mysql:mysql-connector-java:${mysqlVersion}"
+    gretty "org.apache.activemq:activemq-kahadb-store:${activeMqVersion}"
     gretty "com.h2database:h2:${h2Version}"
-
+    gretty "mysql:mysql-connector-java:${mysqlVersion}"
 }
