OPENSHIFT: Revert "Merge branch 'feature/openshift' into develop"
This reverts commit ffc10b7aeb039f9f58ae0486de5d2002f4ca725e, reversing
changes made to 33ca3b04df164f919a78f69af467fe13c4b73ef7.

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -20,9 +20,9 @@ gretty {
     debugPort = 5005
     debugSuspend = false
 
-    jvmArgs = [jvmArgSpringProfiles,
-               "-Dcatalina.base=${buildDir}/catalina.base",
-               "-Drecipients.file=${projectDir}/recipients-dev.json",
+    jvmArgs = ["-Dcatalina.base=${buildDir}/catalina.base",
+               "-Dspring.profiles.active=dev,caching-enabled,wc-hsa-stub",
+               "-Drecipient.config.file=${projectDir}/recipients-dev.json",
                "-Dcredentials.file=${projectDir}/certificate-credentials.properties",
                "-Dconfig.file=${projectDir}/certificate-dev.properties"]
 }
@@ -51,33 +51,30 @@ dependencies {
     compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
     compile "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
 
-    compile "org.apache.activemq:activemq-spring:${activeMqVersion}"
-
     compile "org.springframework:spring-jms:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
 
-    compileOnly "javax.jms:jms-api:${javaxJmsVersion}"
+    compileOnly "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
     compileOnly "javax.servlet:servlet-api:${servletApiVersion}"
     compileOnly "org.apache.activemq:activemq-client:${activeMqVersion}"
+    compileOnly "org.apache.activemq:activemq-pool:${activeMqVersion}"
 
-    testCompile "com.jayway.restassured:rest-assured:${restassuredVersion}"
-    testCompile "com.jayway.restassured:json-schema-validator:${jsonSchemaValidatorVersion}"
-    testCompile "javax.jms:jms-api:${javaxJmsVersion}"
-    testCompile "org.antlr:ST4:${stAntlr4Version}"
     testCompile "org.springframework:spring-test:${springVersion}"
     testCompile "xmlunit:xmlunit:${xmlUnitVersion}"
+    testCompile "com.jayway.restassured:rest-assured:${restassuredVersion}"
+    testCompile "com.jayway.restassured:json-schema-validator:${jsonSchemaValidatorVersion}"
+    testCompile "org.antlr:ST4:${stAntlr4Version}"
+    testCompile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
 
     // We explicitly declare this as a testRuntime dependency so Restassured tests loads the correct XSD for
     // SetCertificateStatusResponder_1.0.xsd (as it exists in two different schemas)
     testRuntime "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
     testRuntime "javax.servlet:servlet-api:${servletApiVersion}"
 
-    testRuntime "com.h2database:h2:${h2Version}"
-
     gretty "org.apache.activemq:activemq-client:${activeMqVersion}"
     gretty "org.apache.activemq:activemq-broker:${activeMqVersion}"
     gretty "org.apache.activemq:activemq-pool:${activeMqVersion}"
     gretty "mysql:mysql-connector-java:${mysqlVersion}"
     gretty "com.h2database:h2:${h2Version}"
-
+    gretty "mysql:mysql-connector-java:${mysqlVersion}"
 }
