--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0"
+         version="3.0" 
          metadata-complete="true">
 
   <display-name>Inera Certificate</display-name>
@@ -32,7 +32,7 @@
 
   <context-param>
       <param-name>logbackConfigParameter</param-name>
-      <param-value>logback.file</param-value>
+      <param-value>certificate.logback.file</param-value>
   </context-param>
 
   <filter>
