--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -29,10 +29,21 @@
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:/application-context.xml</param-value>
   </context-param>
+
   <context-param>
       <param-name>logbackConfigParameter</param-name>
       <param-value>logback.file</param-value>
   </context-param>
+
+  <filter>
+    <filter-name>LogMDCFilter</filter-name>
+    <filter-class>se.inera.intyg.infra.monitoring.logging.LogMDCServletFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>LogMDCFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <servlet-mapping>
     <servlet-name>jsp</servlet-name>
