BUILDENV: environment broker vars changed in new OCP test cluster

--- a/devops/openshift/test/config/intygstjanst.properties
+++ b/devops/openshift/test/config/intygstjanst.properties
@@ -5,7 +5,13 @@ db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useCompression=true&useSS
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JMS
-jms.broker.url=${activemq.amq.tcp.port}?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
+jms.broker.url=${broker.amq.tcp.port}\
+?jms.nonBlockingRedelivery=true\
+&jms.redeliveryPolicy.maximumRedeliveries=3\
+&jms.redeliveryPolicy.maximumRedeliveryDelay=6000\
+&jms.redeliveryPolicy.initialRedeliveryDelay=4000\
+&jms.redeliveryPolicy.useExponentialBackOff=true\
+&jms.redeliveryPolicy.backOffMultiplier=2
 
 # NTjP configuration
 ntjp.base.url=${baseUrl}/inera-certificate/stubs
