DEVENV: use same name convention for activemq parameters as other applications. Unecessary test code removed.

--- a/devops/openshift/test/config/intygstjanst.properties
+++ b/devops/openshift/test/config/intygstjanst.properties
@@ -5,7 +5,7 @@ db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useCompression=true&useSS
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JMS
-jms.broker.url=${broker.amq.tcp.port}\
+activemq.broker.url=${broker.amq.tcp.port}\
 ?jms.nonBlockingRedelivery=true\
 &jms.redeliveryPolicy.maximumRedeliveries=3\
 &jms.redeliveryPolicy.maximumRedeliveryDelay=6000\
