--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -34,10 +34,10 @@ hibernate.show_sql=false
 hibernate.format_sql=true
 
 # JMS configuration
-jms.broker.url=vm://localhost?broker.persistent=false
-jms.broker.username=
-jms.broker.password=
-jms.destination.queue.name=certificate.queue
+activemq.broker.url=vm://localhost?broker.persistent=false
+activemq.broker.username=
+activemq.broker.password=
+activemq.destination.queue.name=certificate.queue
 
 # NTjP SSL
 ntjp.ws.certificate.file=
