OPENSHIFT: Adjusted configuration variables.

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
 
   <context-param>
       <param-name>logbackConfigParameter</param-name>
-      <param-value>certificate.logback.file</param-value>
+      <param-value>logback.file</param-value>
   </context-param>
 
   <filter>
