DEVENV: corrected default hibernate parameter. removed unused parameter and use real UUID in test

--- a/devops/openshift/test/config/intygstjanst.properties
+++ b/devops/openshift/test/config/intygstjanst.properties
@@ -1,8 +1,6 @@
 # DB configuration
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useCompression=true&useSSL=false
-
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false
 
 # JMS
 activemq.broker.url=${broker.amq.tcp.port}\
