--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -18,17 +18,17 @@
 #
 
 # Default configuration for all environments
-store.original.certificate=true
 
-# H2 configuration
+# Default DB (embedded H2) configuration
 db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
 db.username=sa
 db.password=
+# Spring profile "embedded" activates a H2 console on this port
 db.httpPort=8082
 
-# Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+# Hibernate stuff
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=
 hibernate.show_sql=false
 hibernate.format_sql=true
@@ -41,14 +41,14 @@ activemq.destination.queue.name=certificate.queue
 
 # NTjP SSL
 # TODO
-ntjp.ws.certificate.file =
-ntjp.ws.certificate.type =PKCS12
-ntjp.ws.truststore.file =
-ntjp.ws.truststore.type =JKS
+ntjp.ws.certificate.file=
+ntjp.ws.certificate.type=PKCS12
+ntjp.ws.truststore.file=
+ntjp.ws.truststore.type=JKS
 
 # Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env.
 # However we want it enabled when building on jenkins since it runs the TransformToStatisticsIT integration test.
-statistics.enabled = true
+statistics.enabled=true
 
 # Dynamic loading of identities into HSA stub
 hsa.stub.additional.identities.folder=${java.io.tmpdir}
