BUILDENV: use dev profile for pipeline config

--- a/devops/openshift/test/env/secret-env.properties
+++ b/devops/openshift/test/env/secret-env.properties
@@ -1,10 +1,4 @@
-# HSA
-hsa.ws.key.manager.password=
-hsa.ws.certificate.password=
-hsa.ws.truststore.password=password
-
 # NTJP
 ntjp.ws.certificate.password=
 ntjp.ws.key.manager.password=
-ntjp.ws.truststore.password=password
-
+ntjp.ws.truststore.password=
