--- a/persistence/src/test/resources/test.properties
+++ b/persistence/src/test/resources/test.properties
@@ -2,6 +2,7 @@ db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
 db.username=sa
 db.password=
+db.pool.maxSize=3
 
 # Hibernate stuff
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
