--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -24,6 +24,7 @@ db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
 db.username=sa
 db.password=
+db.pool.maxSize=20
 # Spring profile "embedded" activates a H2 console on this port
 db.httpPort=8082
 
@@ -31,7 +32,7 @@ db.httpPort=8082
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=
 hibernate.show_sql=false
-hibernate.format_sql=true
+hibernate.format_sql=false
 
 # JMS configuration
 activemq.broker.url=vm://localhost?broker.persistent=false
