--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -19,14 +19,12 @@
 
 # Default configuration for all environments
 
-# Default DB (embedded H2) configuration
-db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
-db.username=sa
+# Default DB (MySQL) configuration
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false
+db.username=
 db.password=
 db.pool.maxSize=20
-# Spring profile "embedded" activates a H2 console on this port
-db.httpPort=8082
 
 # Hibernate stuff
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
