--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -17,5 +17,13 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
+db.driver=org.h2.Driver
+db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
+db.username=sa
+db.pool.maxSize=5
+
+# Spring profile "embedded" activates a H2 console on this port
+db.httpPort=8082
+
 ntjp.base.url=http://localhost:8080/inera-certificate/stubs
 infrastructure.directory.logicalAddress=stub
