DEVENV: default db.port added. reverted to 5.1 mysql driver.

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -24,6 +24,7 @@ db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false
 db.username=
 db.password=
+db.port=3306
 db.pool.maxSize=20
 
 # Hibernate stuff
