--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -86,6 +86,7 @@ infrastructure.directory.employee.getemployee.endpoint.url=${ntjp.base.url}/infr
 # HSA/PU Cache (redis) configuration
 #
 ################################################
+redis.host=127.0.0.1
 redis.port=6379
 redis.password=
 redis.cache.default_entry_expiry_time_in_seconds=86400
