INTYG-6837: control embedded redis with caching-enabled and embedded profiles only. make sure queues are purged during performance tests. use latest jdbc driver on openshift

--- a/devops/openshift/test/config/intygstjanst.properties
+++ b/devops/openshift/test/config/intygstjanst.properties
@@ -1,3 +1,6 @@
+#
+db.driver=com.mysql.cj.jdbc.Driver
+
 # JMS
 activemq.broker.url=${broker.amq.tcp.port}\
 ?jms.nonBlockingRedelivery=true\
@@ -6,7 +9,9 @@ activemq.broker.url=${broker.amq.tcp.port}\
 &jms.redeliveryPolicy.initialRedeliveryDelay=4000\
 &jms.redeliveryPolicy.useExponentialBackOff=true\
 &jms.redeliveryPolicy.backOffMultiplier=2
+activemq.destination.queue.name=perf.certificate.queue
 
 # NTjP configuration
 ntjp.base.url=${baseUrl}/inera-certificate/stubs
 infrastructure.directory.logicalAddress=stub
+
