DEVENV: CLOSE_DELAY added to avoid unexpected shutdown of embedded H2 database

--- a/persistence/src/test/resources/test.properties
+++ b/persistence/src/test/resources/test.properties
@@ -1,4 +1,4 @@
 #
 db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
+db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE;DB_CLOSE_DELAY=-1
 db.pool.maxSize=3
