--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -18,7 +18,7 @@
 #
 
 db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE
+db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE;DB_CLOSE_DELAY=-1
 db.username=sa
 db.pool.maxSize=5
 
