INTYG-6989: Hämta mottagare per intyg och inte (som tidigare) per intygstyp

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ ext {
 
     intygHealthcondRehabilitationSchemasVersion = "1.0.7"
     intygInsuranceprocessSchemasVersion = "1.0.4"
+    intygClinicalprocessSchemasVersion = "0-SNAPSHOT"
     rivtaClinicalprocessSchemasVersion = "3.2.0-RC3"
     rivtaItintegrationMonitoringSchemasVersion = "1.0.0.4"
 
