--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -107,3 +107,6 @@ recipient.file = ${recipient.config.file}
 
 # Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
 fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
+
+# Use old tsbas format sendtorecipientV1 (by translating from sendtorecipientV3)
+tsbas.send.certificate.to.recipient.transform.v3.to.v1=true
