INTYG-6977: Ändring av featuretoggling för mottagaren. Kan vara v1 eller v3

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -108,5 +108,5 @@ recipient.file = ${recipient.config.file}
 # Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
 fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
 
-# Use old tsbas format sendtorecipientV1 (by translating from sendtorecipientV3)
-tsbas.send.certificate.to.recipient.transform.v3.to.v1=true
+# Use old format v1 or new v3 when sending TsBas certificate to recipient
+tsbas.registercertificate.version=v1
