--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -108,5 +108,5 @@ recipient.file = ${recipient.config.file}
 # Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
 fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
 
-# Use old format v1 or new v3 when sending TsBas certificate to recipient
-tsbas.registercertificate.version=v1
+# Use old format v1 or new v3 when sending TsBas RegisterCertificate to recipient
+tsbas.send.certificate.to.recipient.registercertificate.version=v1
