DEVENV: Byggde på installationsanvisningar samt uppdaterade lite properties för att täcka in saker bör overridas från default.properties

--- a/devops/openshift/staging/config/certificate.properties
+++ b/devops/openshift/staging/config/certificate.properties
@@ -23,3 +23,9 @@ sendmessagetorecipientv2.endpoint.url=${localhost.stub.url}/clinicalprocess/heal
 
 # Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env
 statistics.enabled=true
+
+# Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
+fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
+
+# Use old format v1 or new v3 when sending TsBas RegisterCertificate to recipient
+tsbas.send.certificate.to.recipient.registercertificate.version=v3
