--- a/devops/openshift/staging/configmap-vars.yaml
+++ b/devops/openshift/staging/configmap-vars.yaml
@@ -1,8 +1,10 @@
 apiVersion: v1
 data:
   REDIS_HOST: <replaceme>
+  REDIS_SENTINEL_MASTER_NAME: <replaceme>
   ACTIVEMQ_BROKER_URL: tcp://<replaceme>:<replaceme>
   ACTIVEMQ_DESTINATION_QUEUE_NAME: staging.statistik.utlatande.queue
+  ACTIVEMQ_INTERNAL_NOTIFICATION_QUEUE_NAME=staging.internal.notification.queue
   NTJP_WS_CERTIFICATE_FILE=${CERTIFICATE_FOLDER}/demo.intygstjanst.intygstjanster.se.p12
   NTJP_WS_TRUSTSTORE_FILE=${CERTIFICATE_FOLDER}/truststore.jks
   NTJP_WS_CERTIFICATE_TYPE: PKCS12
