--- a/web/build.gradle
+++ b/web/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile "se.inera.intyg.common:db:${commonVersion}"
     compile "se.inera.intyg.common:doi:${commonVersion}"
     compile "se.inera.intyg.common:af00213:${commonVersion}"
+    compile "se.inera.intyg.common:ag114:${commonVersion}"
 
 
     compile "org.apache.activemq:activemq-spring:${activeMqVersion}"
