BUILDENV: Korrigerade felaktiga sökvägar och portar i demo-konfigen för OCP

--- a/devops/openshift/demo/config/certificate.properties
+++ b/devops/openshift/demo/config/certificate.properties
@@ -9,12 +9,12 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 ntjp.base.url=https://qa.esb.ntjp.se:443/vp
 infrastructure.directory.logicalAddress=SE165565594230-1000
-localhost.stub.url=http://localhost:8084/inera-certificate/stubs
+localhost.stub.url=http://localhost:8080/inera-certificate/stubs
 
 # QA-certs:
-ntjp.ws.certificate.file = ${config.dir}/certifikat/demo.intygstjanst.intygstjanster.se.p12
+ntjp.ws.certificate.file = ${certificate.folder}/demo.intygstjanst.intygstjanster.se.p12
 ntjp.ws.certificate.type = PKCS12
-ntjp.ws.truststore.file = ${config.dir}/certifikat/truststore.jks
+ntjp.ws.truststore.file = ${certificate.folder}/truststore.jks
 ntjp.ws.truststore.type = JKS
 
 # Endpoints for communicating with FK
