--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -48,6 +48,15 @@ ntjp.ws.certificate.type=PKCS12
 ntjp.ws.truststore.file=
 ntjp.ws.truststore.type=JKS
 
+
+#################################################
+#
+# Dynamic texts
+#
+#################################################
+texts.file.directory=${resources.folder}/texts/
+texts.update.cron= 0 0 0 * * *
+
 # Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env.
 # However we want it enabled when building on jenkins since it runs the TransformToStatisticsIT integration test.
 statistics.enabled=true
