--- a/web/build.gradle
+++ b/web/build.gradle
@@ -17,7 +17,7 @@ task zipResources(type: ArchiveDirectoryTask) {
     include '*/*' //to include contents of a folder present inside from directory
     archiveName 'resources.zip'
     destinationDir(file('../devops/openshift/test/env'))
-    archiveOnlyIfDiff new File("${sourcePath}/${archiveName}").exists()
+    archiveOnlyIfDiff file('${sourcePath}/${archiveName}').exists()
 }
 
 build.dependsOn zipResources
