--- a/web/build.gradle
+++ b/web/build.gradle
@@ -17,7 +17,7 @@ task zipResources(type: ArchiveDirectoryTask) {
     include '*/*' //to include contents of a folder present inside from directory
     archiveName 'resources.zip'
     destinationDir(file('../devops/openshift/test/env'))
-    archiveOnlyIfDiff true
+    archiveOnlyIfDiff file('${sourcePath}/${archiveName}').exists()
 }
 
 build.dependsOn zipResources
@@ -68,6 +68,7 @@ dependencies {
     compile "se.inera.intyg.common:doi:${commonVersion}"
     compile "se.inera.intyg.common:af00213:${commonVersion}"
     compile "se.inera.intyg.common:ag114:${commonVersion}"
+    compile "se.inera.intyg.common:ag7804:${commonVersion}"
 
 
     compile "org.apache.activemq:activemq-spring:${activeMqVersion}"
