--- a/web/build.gradle
+++ b/web/build.gradle
@@ -12,12 +12,12 @@ task restAssuredTest(type: Test) {
 }
 
 task zipResources(type: ArchiveDirectoryTask) {
-    sourcePath '../src/main/resources'
-    include '*'
-    include '*/*' //to include contents of a folder present inside from directory
-    archiveName 'resources.zip'
+    sourcePath "../src/main/resources"
+    include "*"
+    include "*/*" //to include contents of a folder present inside from directory
+    archiveName "resources.zip"
     destinationDir(file('../devops/openshift/test/env'))
-    archiveOnlyIfDiff file('${sourcePath}/${archiveName}').exists()
+    archiveOnlyIfDiff file("${destinationDir}/${archiveName}").exists()
 }
 
 build.dependsOn zipResources
