--- a/devops/openshift/stage/configmap-vars.yaml
+++ b/devops/openshift/stage/configmap-vars.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 data:
-  REDIS_HOST: <replaceme>
-  REDIS_SENTINEL_MASTER_NAME: <replaceme>
-  ACTIVEMQ_BROKER_URL: tcp://<replaceme>:<replaceme>
-  ACTIVEMQ_DESTINATION_QUEUE_NAME: stage.statistik.utlatande.queue
-  ACTIVEMQ_INTERNAL_NOTIFICATION_QUEUE_NAME=stage.internal.notification.queue
-  NTJP_WS_CERTIFICATE_FILE=${CERTIFICATE_FOLDER}/demo.intygstjanst.intygstjanster.se.p12
-  NTJP_WS_TRUSTSTORE_FILE=${CERTIFICATE_FOLDER}/truststore.jks
+  REDIS_SERVICE_HOST: ind-sint-redis1.ind1.sth.basefarm.net;ind-sint-redis2.ind1.sth.basefarm.net;ind-sint-redis3.ind1.sth.basefarm.net
+  REDIS_SERVICE_PORT: 26379;26379;26379
+  ACTIVEMQ_BROKER_URL: "failover:(tcp://ind-sint-activemq1.ind1.sth.basefarm.net:61616,tcp://ind-sint-activemq2.ind1.sth.basefarm.net:61616)?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2&jms.redeliveryPolicy.maximumRedeliveries=30&jms.redeliveryPolicy.maximumRedeliveryDelay=3600000&jms.redeliveryPolicy.initialRedeliveryDelay=60000"
+  TSBAS_SEND_CERTIFICATE_TO_RECIPIENT_REGISTERCERTIFICATE_VERSION: "v1"
+  ACTIVEMQ_DESTINATION_QUEUE_NAME: statistik.utlatande.queue
+  NTJP_WS_CERTIFICATE: ${certificate.folder}/qa.minaintyg.sjunet.org.p12
+  NTJP_WS_TRUSTSTORE: ${certificate.folder}/truststore-ntjp.jks
   NTJP_WS_CERTIFICATE_TYPE: PKCS12
   NTJP_WS_TRUSTSTORE_TYPE: JKS
-
 kind: ConfigMap
 metadata:
-  name: intygstjanst-stage-configmap-envvar
+  name: intygstjanst-configmap-envvar
 type: Opaque
