--- a/web/build.gradle
+++ b/web/build.gradle
@@ -16,7 +16,7 @@ task zipResources(type: ArchiveDirectoryTask) {
     include "*"
     include "*/*" //to include contents of a folder present inside from directory
     archiveName "resources.zip"
-    destinationDir(file('../devops/openshift/test/env'))
+    destinationDir(file("../devops/openshift/test/env"))
     archiveOnlyIfDiff file("${destinationDir}/${archiveName}").exists()
 }
 
